--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=DM+Sans:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=DM+Sans:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=JgPQ3d"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=JgPQ3d" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=xOjRnJ"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=xOjRnJ" type="text/css">
 
   
   
@@ -35,6 +35,20 @@
 
 </head>
 <body>
+
+<!-- Analytics -->
+<!-- Google tag (gtag.js) -->
+<script async="" src="https://www.googletagmanager.com/gtag/js?id=G-ZJMDTS50Y5"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-ZJMDTS50Y5');
+</script>
+<!-- /Analytics -->
+
+
   
   <section class="menu cid-uLBOZYdW1z" once="menu" id="menu01-0">
     
@@ -182,7 +196,7 @@
       <div class="col-md-12 card col-lg-8">
 
         <div class="wrapper">
-          <p class="card-text mbr-fonts-style display-5">
+          <p class="card-text mbr-fonts-style display-7">
             Permíteme presentarme, mi nombre es Herson Alfonso Castellanos Celis y nos acompañaremos en esta nueva aventura de descubrimiento personal; soy psicólogo de formación, académico curioso y docente en educación superior, entusiasta de la tecnología y de su vinculación con la enseñanza y el aprendizaje, diseñador y participante de diversos proyectos sociales, en su mayoría educativos... por sobre todo soy: padre orgulloso, compañero decidido y amigo comprometido, y te invito a conocernos mejor en una buena plática... ¿cómo ves?</p>
           <span class="mbr-iconfont icon1 mobi-mbri-quote-left mobi-mbri"></span>
           <span class="mbr-iconfont icon2 mobi-mbri-quote-right mobi-mbri"></span>
@@ -573,8 +587,7 @@
             </div>
         </div>
         <div class="col-12">
-            <p class="mbr-text mt-5 mbr-fonts-style display-4">
-                © Pensamiento creativo by Herson Alfonso Castellanos Celis 2025 is marked with CC0 1.0 Universal.
+            <p class="mbr-text mt-5 mbr-fonts-style display-4"><a href="https://herson-castellanos.github.io/pensamiento_creativo/" class="text-primary" target="_blank">Pensamiento creativo</a> © 2025 by <a href="https://www.uv.mx/personal/hecastellanos/" class="text-primary" target="_blank">Herson Alfonso Castellanos Celis</a> is licensed under <a href="https://creativecommons.org/licenses/by/4.0/" class="text-primary" target="_blank">Creative Commons Attribution 4.0 International</a>. To view a copy of this license, visit <a href="https://creativecommons.org/licenses/by/4.0/" class="text-primary" target="_blank">https://creativecommons.org/licenses/by/4.0/</a>
             </p>
         </div>
     </div>
