--- a/dinamica.html
+++ b/dinamica.html
@@ -24,15 +24,15 @@
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
   <link rel="stylesheet" href="assets/animatecss/animate.min.css">
-  <link rel="stylesheet" href="assets/popup-overlay-plugin/style.css">
-    <link rel="stylesheet" href="assets/dropdown/css/style.css">
+    <link rel="stylesheet" href="assets/popup-overlay-plugin/style.css">
+  <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/as-pie-progress/css/progress.min.css">
   <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="stylesheet" href="assets/recaptcha.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=DM+Sans:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=DM+Sans:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=P26r8a"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=P26r8a" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=viRV7b"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=viRV7b" type="text/css">
 
   
   
@@ -823,7 +823,7 @@
                     <h1 class="mbr-section-title mbr-semibold pb-3 align-left mbr-fonts-style display-2">A continuación</h1>
                     
                     <p class="pb-3 align-left mbr-fonts-style text display-7">
-                        La «Sesión 1. ¿Qué es la creatividad?» o dirígete a la sección o sesión que sea de tu interés</p>
+                        La «Sesión 1. ¿Qué es la creatividad?» o dirígete a la sección o sesión que sea de tu interés.</p>
                     <div class="align-left mbr-section-btn mbr-bold"><a class="btn btn-md btn-primary display-4" href="sesion01.html#header03-15">Iniciar</a></div>
                 </div>
             </div>
@@ -834,12 +834,11 @@
                         <div class="card-outer-wrap">
                             <div class="card-wrap p-sm-4">
                                 <div class="card-img">
-                                    <a href="index.html#header02-1"><span class="mbr-iconfont mdi-hardware-phonelink"></span></a>
+                                    <a href="sesion01.html#header03-15"><span class="mbr-iconfont mdi-image-looks-one"></span></a>
                                 </div>
                                 <div class="card-box">
                                     
-                                    <p class="mbr-text mbr-fonts-style mbr-bold display-4">
-                                        <a href="index.html#header02-1" class="text-primary"><strong>Bienvenida y Dinámica.</strong></a></p>
+                                    <p class="mbr-text mbr-fonts-style mbr-bold display-4"><a href="sesion01.html#header03-15" class="text-primary">¿Qué es la creatividad?</a><br></p>
                                 </div>
                             </div>
                         </div>
