--- a/charlas.html
+++ b/charlas.html
@@ -289,7 +289,7 @@
             </div>
         </div>
         <div class="col-12">
-            <p class="mbr-text mt-5 mbr-fonts-style display-4"><a href="https://herson-castellanos.github.io/pensamiento_creativo/" class="text-primary" target="_blank">Pensamiento creativo</a> © 2025 by <a href="https://www.uv.mx/personal/hecastellanos/" class="text-primary" target="_blank">Herson Alfonso Castellanos Celis</a> is licensed under <a href="https://creativecommons.org/licenses/by/4.0/" class="text-primary" target="_blank">Creative Commons Attribution 4.0 International</a>. To view a copy of this license, visit <a href="https://creativecommons.org/licenses/by/4.0/" class="text-primary" target="_blank">https://creativecommons.org/licenses/by/4.0/</a>
+            <p class="mbr-text mt-5 mbr-fonts-style display-4"><a href="https://herson-castellanos.github.io/pensamiento_creativo/">Pensamiento creativo</a> © 2025 by <a href="https://www.uv.mx/personal/hecastellanos/">Herson Alfonso Castellanos Celis</a> is licensed under <a href="https://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International</a><img src="https://mirrors.creativecommons.org/presskit/icons/cc.svg" style="max-width: 1em;max-height:1em;margin-left: .2em;"><img src="https://mirrors.creativecommons.org/presskit/icons/by.svg" style="max-width: 1em;max-height:1em;margin-left: .2em;">
             </p>
         </div>
     </div>
