--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                     <div class="timeline-text-content">
                         <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5">
                             Sesión 1. ¿Qué es la creatividad?</h4>
-                        <p class="mbr-timeline-text mbr-fonts-style display-7"><em>Lunes, 02 de junio de 2025.<br></em><br>Abordaremos la introducción: definición de creatividad y sus diferentes tipos, mitos y realidades, y la importancia de la creatividad en la vida cotidiana y profesional.
+                        <p class="mbr-timeline-text mbr-fonts-style display-7"><em>Jueves, 05 de junio de 2025.<br></em><br>Abordaremos la introducción: definición de creatividad y sus diferentes tipos, mitos y realidades, y la importancia de la creatividad en la vida cotidiana y profesional.
                         </p>
                     </div>
                 </div>
@@ -269,7 +269,7 @@
                     <div class="timeline-text-content">
                         <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5">
                             Sesión 2. Cultivando la creatividad.<br></h4>
-                        <p class="mbr-timeline-text mbr-fonts-style display-7"><em>Jueves, 05 de junio de 2025.<br></em><br>En esta segunda sesión platicaremos sobre hábitos creativos, la mente abierta y la curiosidad.<br></p>
+                        <p class="mbr-timeline-text mbr-fonts-style display-7"><em>Jueves, 12 de junio de 2025.<br></em><br>En esta segunda sesión platicaremos sobre hábitos creativos, la mente abierta y la curiosidad.<br></p>
                     </div>
                 </div>
             </div>
@@ -282,7 +282,7 @@
                     <div class="timeline-text-content">
                         <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5">
                             Sesión 3. Bloqueadores de la creatividad.</h4>
-                        <p class="mbr-timeline-text mbr-fonts-style display-7"><em>Jueves, 12 de junio de 2025.<br></em><br>En esta sesión, reconoceremos los factores que inhiben el pensamiento creativo, el miedo a equivocarse y a ser juzgados, la imperfección como parte del proceso creativo, las dinámicas de grupo creativas, buscaremos motivar a otros a ser creativos, e implementaremos nuevas ideas en nuestro entorno organizacional.
+                        <p class="mbr-timeline-text mbr-fonts-style display-7"><em>Lunes, 16 de junio de 2025.<br></em><br>En esta sesión, reconoceremos los factores que inhiben el pensamiento creativo, el miedo a equivocarse y a ser juzgados, la imperfección como parte del proceso creativo, las dinámicas de grupo creativas, buscaremos motivar a otros a ser creativos, e implementaremos nuevas ideas en nuestro entorno organizacional.
                         </p>
                     </div>
                 </div>
@@ -296,7 +296,7 @@
                     <div class="timeline-text-content">
                         <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5">
                             Sesión 4. Técnicas de generación de ideas.</h4>
-                        <p class="mbr-timeline-text mbr-fonts-style display-7"><em>Lunes, 16 de junio de 2025.<br></em><br>Realizaremos diversos ejercicios para mejorar nuestra creatividad como Brainstorming, SCAMPER, y la técnica de 6 sombreros para pensar.<br></p>
+                        <p class="mbr-timeline-text mbr-fonts-style display-7"><em>Jueves, 19 de junio de 2025.<br></em><br>Realizaremos diversos ejercicios para mejorar nuestra creatividad como Brainstorming, SCAMPER, y la técnica de 6 sombreros para pensar.<br></p>
                     </div>
                 </div>
             </div>
@@ -309,7 +309,7 @@
                     <div class="timeline-text-content">
                         <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5">
                             Sesión 5. Pensamiento lateral y visualización.</h4>
-                        <p class="mbr-timeline-text mbr-fonts-style display-7"><em>Jueves, 19 de junio de 2025.<br></em><br>En esta sesión desafiaremos las suposiciones y buscaremos soluciones alternativas, utilizaremos comparaciones para generar nuevas ideas, realizaremos desafíos intencionales para estimular el pensamiento creativo, buscaremos transformar ideas abstractas en imágenes mentales, crearemos modelos simples para probar y refinar ideas, y reconoceremos la importancia del ensayo y error.
+                        <p class="mbr-timeline-text mbr-fonts-style display-7"><em>Lunes, 23 de junio de 2025.<br></em><br>En esta sesión desafiaremos las suposiciones y buscaremos soluciones alternativas, utilizaremos comparaciones para generar nuevas ideas, realizaremos desafíos intencionales para estimular el pensamiento creativo, buscaremos transformar ideas abstractas en imágenes mentales, crearemos modelos simples para probar y refinar ideas, y reconoceremos la importancia del ensayo y error.
                         </p>
                     </div>
                 </div>
